--- a/template/register.twig
+++ b/template/register.twig
@@ -1,4 +1,4 @@
-<section id="register">
+<section id="register" style="margin-top: 8vh;">
     <div class="container">
     <form class="form-inline" action="register.php" method="post">
         <div class="form-group">
